tests/cases/positive/syntax/grading/varInGrade.lam
-- you can use variables in grades
test : (s : Level) (x : [s, s] Level) -> Level
