tests/cases/negative/scope/grading/unboundVarInFunGrade.lam
-- we reference an unbound variable in a graded binder
test : (x : [s, _] Level) -> Level
test = _
